--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="description" content="Portfolio of Akhilesh Pant: AI, ML, Cybersecurity — articles, research, projects, and technical notes." />
     <meta name="keywords" content="Akhilesh Pant, APX, AI engineer, machine learning engineer, cybersecurity engineer, research engineer, portfolio, articles, publications, ML projects" />
 
+
+
+
+    <meta name="google-site-verification" content="YOUR_CODE_HERE" />
+
+
+
+
+    
     <!-- AUTHOR -->
     <meta name="author" content="Akhilesh Pant" />
 
