--- a/index.html
+++ b/index.html
@@ -332,21 +332,22 @@
                     </div>
 
                     <!-- FEATURED (CLICKABLE) -->
-                    <a href="articles/matrix.html"
+                    <a href="articles/agenticAI.html"
                         aria-label="Open Matrix article"
                         style="text-decoration:none;color:inherit;">
                         <aside class="hero-right" aria-label="Featured article">
                             <img class="cover-img"
-                                src="assets/images/matrix.jpg"
-                                alt="Matrix — Ray Native orchestration"
+                                src="assets/images/agenticAI.jpg"
+                                alt="agenticAI"
                                 onerror="this.style.display='none'">
                             <div class="small-stat">
                                 <div style="display:flex;flex-direction:column">
                                     <div
                                         style="font-weight:800;color:#e8fbff">Featured</div>
                                     <div
-                                        style="color:var(--muted);font-size:13px">Matrix:
-                                        Decentralized data pipelines • Nov
+                                        style="color:var(--muted);font-size:13px">Agentic AI:
+                                       The Future of Autonomous Intelligence
+ • Dec
                                         2025</div>
                                 </div>
                                 <div
@@ -370,7 +371,30 @@
                         aria-label="Scroll left">&#10094;</button>
 
                     <div class="carousel-track" id="carousel-track" role="list">
-                        <!-- card 1 -->
+
+
+
+ <!-- card 1 -->
+
+<article class="carousel-card" role="listitem">
+                            <a href="articles/agenticAI.html"
+                                style="display:block;color:inherit">
+                                <figure class="carousel-thumb"><img
+                                        src="assets/images/agenticAI.jpg"
+                                        alt="Agentic AI article"></figure>
+                                <div class="carousel-meta">Agentic AI: • 11 Dec 2025 •
+                                    5 min</div>
+                                <div class="carousel-title">Agentic AI: The Future of Autonomous Intelligence
+                                    Engine</div>
+                                <div class="carousel-excerpt">A lightweight local module that produces simple plans and explanations as a placeholder for real reasoning.
+
+</div>
+                            </a>
+                        </article>
+
+
+
+                        <!-- card 2 -->
                         <article class="carousel-card" role="listitem">
                             <a href="articles/matrix.html"
                                 style="display:block;color:inherit">
@@ -389,7 +413,7 @@
                             </a>
                         </article>
 
-                        <!-- card 2 -->
+                        <!-- card 3 -->
                         <article class="carousel-card" role="listitem">
                             <a href="articles/Learn.html"
                                 style="display:block;color:inherit">
@@ -407,7 +431,7 @@
                             </a>
                         </article>
 
-                        <!-- card 3 -->
+                        <!-- card 4 -->
                         <article class="carousel-card" role="listitem">
                             <a href="articles/ml_engineering_roadmap.html"
                                 style="display:block;color:inherit">
@@ -424,7 +448,7 @@
                             </a>
                         </article>
 
-                        <!-- card 4 -->
+                        <!-- card 5 -->
                         <article class="carousel-card" role="listitem">
                             <a href="articles/cybersecurity_threats.html"
                                 style="display:block;color:inherit">
